fixing text cut off on certain screens

--- a/main.css
+++ b/main.css
@@ -6,13 +6,23 @@ body {
   height: 100%;
   margin: 0;
   background: #fffef2;
+  overflow: scroll;
 }
 
 #main-container {
+  height: 100%;
   margin: 0;
 }
 
+#intro {
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
 #writing {
+  max-height: 100%;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   color: #2e93ff;
   font-size: 80px;
@@ -22,15 +32,6 @@ body {
 
 a {
   color: #f75757;
-}
-
-#intro {
-  padding: 10px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
 
 #babies {
@@ -143,7 +144,7 @@ ul.topnav li.icon {
   display: none;
 }
 
-/* smallest do I need this one ever? */
+/* mobile styles */
 @media only screen and (max-width: 32rem) {
   #writing {
     font-size: 2.25rem;
@@ -164,7 +165,7 @@ ul.topnav li.icon {
   }
 }
 
-/* is this one ever gettin triggered */
+/* small mobile phones in landscape and some tablets in portrait */
 @media only screen and (min-width: 32rem) and (max-width: 40rem) {
   #writing {
     font-size: 3rem;
@@ -186,7 +187,7 @@ ul.topnav li.icon {
   }
 }
 
-/*this is styling laptops, but they styles are relavant for mobile */
+/* Laptops, some mobile phones in landscape, some tablets */
 @media only screen and (min-width: 40rem) and (max-width: 52rem) {
   #writing {
     font-size: 3.5rem;
@@ -211,6 +212,7 @@ ul.topnav li.icon {
   }
 }
 
+/* Some tablets in portrait*/
 @media only screen and (min-width: 52rem) and (max-width: 64rem) {
   #writing {
     font-size: 4rem;
@@ -235,7 +237,7 @@ ul.topnav li.icon {
   }
 }
 
-/* largest */
+/* largest screens and some tablets in landscape*/
 @media only screen and (min-width: 64rem) {
   #writing {
     padding: 4%;
@@ -245,7 +247,7 @@ ul.topnav li.icon {
 
 @media only screen and (min-width: 90rem) {
   #writing {
-    padding: 4%;
+    padding: 1%;
     font-size: 8rem;
   }
 }
